# shiperon

./: .gitignore  Cargo.toml  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: pr.yml  rust.yml  test.yml
samples/: animals.po  invalids.po  maxint.po  parent.po  quadrants.po  shapes.po  simple.po
src/: lib.rs
src/lexer/: mod.rs  source.rs  token.rs
src/parser/: loc.rs  mod.rs  parse.y  value.rs
tests/lexer/: mod.rs
tests/lexer/inputs/: invalid.po  nums.po  simple.po
tests/lexer/snapshots/: r#mod__lexer__integration@invalid.po.snap  r#mod__lexer__integration@maxint.po.snap  r#mod__lexer__integration@nums.po.snap  r#mod__lexer__integration@simple.po.snap
